--- a/styles/healthcare.module.scss
+++ b/styles/healthcare.module.scss
@@ -1,3 +1,25 @@
+.health-care-component {
+    .swiper-initialized {
+      padding: 10px 22px 0px;
+      @media (max-width: 968px) {
+        padding: 0 0px;
+      }
+    }
+    .swiper-slide {
+      @media (max-width: 968px) {
+        width: 100%;
+      }
+    }
+    .swiper-button-next {
+      right: 0px;
+    } 
+    .swiper-button-prev {
+      left: 0px;
+    }
+    .swiper-button-next, .swiper-button-prev {
+      top: 39%;
+    }
+  }
 
 .key-description-wrapper {
     ul {
